# nix-auto-follow

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  all-follow.py  derivation.nix  flake.nix  pyproject.toml
.github/workflows/: main_nix.yml
example/: flake.nix
example/a/: flake.nix
example/a/b/: flake.nix
example/a/c/: flake.nix
example/b/: flake.nix
example/c/: flake.nix
src/nix_auto_follow/: __init__.py  _version.py  cli.py
tests/: test_cli.py
tests/fixtures/: has_follow.json  non_root_follow.json  root_has_follow.json  simple.json
